Revert "Revert "Redo - Get filename from greengrass uri (#594) (#647)" (#667)" (#731)
This reverts commit 5693d8c31beff4d5f222d43964e6d4edb09a3bcb.